# SM64-Trainer

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.bat  gui_entry.py  pyproject.toml  run-test-server.bat
.claude/: settings.json
.claude/hooks/: git-staging-guard.py  jscheck.py
.claude/skills/create-artifacts/: SKILL.md
.claude/skills/release/: SKILL.md
docs/: api.md  architecture.md
docs/superpowers/plans/: 2026-06-10-practice-tracker-phase1.md  2026-06-10-sm64-star-event-api.md  2026-06-11-segment-events.md  (+17 more)
src/sm64_events/: links.py  main.py
tests/: conftest.py  test_addresses.py  test_analyze_perf_log.py  test_anchors.py  test_api.py  test_app.py  test_app_noise.py  test_area.py  test_broadcaster.py  test_composition.py  test_death.py  test_dedupe.py  test_dust.py  test_events.py  test_igt_clock.py  test_instance_lock.py  test_key.py  test_level.py  test_lifecycle.py  test_links.py  test_memory.py  test_objects.py  test_paths.py  test_perf_soak.py  test_perfmon.py  test_pj64_signature.py  test_poller.py  test_poller_isolation.py  test_procmem.py  test_projection.py  test_ranks_api.py  test_ranks_classify.py  test_ranks_standards.py  test_recorder_lock.py  test_relaunch.py  test_release.py  test_replay_activity.py  test_replay_api.py  test_replay_audio.py  test_replay_clock.py  (+30 more)
tests/fixtures/: xcams_catalog.json  xcams_standards.json
tools/: analyze_perf_log.py  build_exe.py  dedupe_journal.py  find_timer.py  hunt_exact.py  hunt_value.py  make_placeholder_icon.py  release.py  rthook_comtypes.py  scrape_ranks.py  verify_addresses.py  watch_timer.py
(+102 files in other folders)
