[project]
name = "sm64-events"
version = "1.0.3"
description = "Event API for SM64 (Usamune v1.93u) running in Project64 1.6"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymem>=1.13",
    "av>=14",
    "numpy>=1.26",
    "windows-capture>=2.0.0",
    "proc-tap>=1.0.0",
    "pyaudiowpatch>=0.2.12",
    "pycaw>=20251023",
    "pillow>=12.2.0",
    "pywebview>=5.0",
    "pystray>=0.19",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27", "pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sm64_events"]
